single participant - force full width and fix spacing on mobile

--- a/front/style/theme/pages/participant.scss
+++ b/front/style/theme/pages/participant.scss
@@ -39,6 +39,12 @@
 
     .participant-description {
       order: 2;
+
+      .content {
+        > *:first-child{
+          margin-top: rem( 24 );
+        }
+      }
     }
 
     .participant-no-events {
@@ -56,6 +62,7 @@
 
       &.full-width{
         display: flex;
+        width: 100%;
 
         .content {
           p:first-child{
